crates/ruff_python_parser/tests/snapshots/invalid_syntax@statements__with__empty_with_items.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/invalid/statements/with/empty_with_items.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..105,
        body: Suite {
            range: 0..105,
            node_index: NodeIndex(None),
            statements: [
                With(
                    StmtWith {
                        node_index: NodeIndex(None),
                        range: 88..98,
                        is_async: false,
                        items: [],
                        body: Suite {
                            range: 95..98,
                            node_index: NodeIndex(None),
                            statements: [
                                Expr(
                                    StmtExpr {
                                        node_index: NodeIndex(None),
                                        range: 95..98,
                                        value: EllipsisLiteral(
                                            ExprEllipsisLiteral {
                                                node_index: NodeIndex(None),
                                                range: 95..98,
                                            },
                                        ),
                                    },
                                ),
                            ],
                        },
                    },
                ),
                Expr(
                    StmtExpr {
                        node_index: NodeIndex(None),
                        range: 100..105,
                        value: BinOp(
                            ExprBinOp {
                                node_index: NodeIndex(None),
                                range: 100..105,
                                left: Name(
                                    ExprName {
                                        node_index: NodeIndex(None),
                                        range: 100..101,
                                        id: Name("x"),
                                        ctx: Load,
                                    },
                                ),
                                op: Add,
                                right: Name(
                                    ExprName {
                                        node_index: NodeIndex(None),
                                        range: 104..105,
                                        id: Name("y"),
                                        ctx: Load,
                                    },
                                ),
                            },
                        ),
                    },
                ),
            ],
        },
    },
)
```
## Errors

  |
2 | # The parser should recover from this syntax error.
3 |
4 | with : ...
  |      ^ Syntax Error: Expected the start of an expression after `with` keyword
5 |
6 | x + y
  |
